# chv

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  error.rs  init.rs  main.rs  paths.rs
src/cloud/: client.rs  commands.rs  credentials.rs  mod.rs  types.rs
src/version_manager/: download.rs  install.rs  list.rs  mod.rs  resolve.rs
