[package]
name = "chv"
version = "0.1.6"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"
indicatif = "0.17"
futures-util = "0.3"
base64 = "0.22"
rpassword = "7"
